{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 14,
  "lineage": "753d2897-6f9d-f0e7-6ede-e2f97f0aac7a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-29T06:17:25.712-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terra-env-363914/global/firewalls/terra-env-363914-fw-allow-http",
            "name": "terra-env-363914-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/global/networks/terra-vpc",
            "priority": 1000,
            "project": "terra-env-363914",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/global/firewalls/terra-env-363914-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-29T06:17:25.708-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terra-env-363914/global/firewalls/terra-env-363914-fw-allow-https",
            "name": "terra-env-363914-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/global/networks/terra-vpc",
            "priority": 1000,
            "project": "terra-env-363914",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/global/firewalls/terra-env-363914-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-29T06:17:25.729-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terra-env-363914/global/firewalls/terra-env-363914-fw-allow-rdp",
            "name": "terra-env-363914-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/global/networks/terra-vpc",
            "priority": 1000,
            "project": "terra-env-363914",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/global/firewalls/terra-env-363914-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-29T06:17:25.700-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/terra-env-363914/global/firewalls/terra-env-363914-fw-allow-ssh",
            "name": "terra-env-363914-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/global/networks/terra-vpc",
            "priority": 1000,
            "project": "terra-env-363914",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/global/firewalls/terra-env-363914-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20180129",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/zones/us-central1-c/disks/terraform-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terra-env-363914/zones/us-central1-c/instances/terraform-instance",
            "instance_id": "196819881702195645",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "mMGAt7z_UPg=",
            "name": "terraform-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.136.14.26",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/global/networks/default",
                "network_ip": "10.128.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/regions/us-central1/subnetworks/default",
                "subnetwork_project": "terra-env-363914"
              }
            ],
            "project": "terra-env-363914",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/zones/us-central1-c/instances/terraform-instance",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/terra-env-363914/global/networks/terra-vpc",
            "name": "terra-vpc",
            "project": "terra-env-363914",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/global/networks/terra-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-29T06:17:27.493-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/terra-env-363914/regions/us-central1/subnetworks/terra-env-363914-public-subnet-1",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "terra-env-363914-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/global/networks/terra-vpc",
            "private_ip_google_access": false,
            "project": "terra-env-363914",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-env-363914/regions/us-central1/subnetworks/terra-env-363914-public-subnet-1"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}